heading, navbar and content section

--- a/index.html
+++ b/index.html
@@ -6,10 +6,67 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Blog</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-  <p>Hello World!!!</p>
+  <div class="main-wrapper">
+    <!-- Heading -->
+    <h1>My Blogs</h1>
+    <!-- Heading -->
+
+    <!-- NavBar -->
+    <div class="nav-wrapper">
+      <div class="nav-bar">
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#health">Health</a></li>
+          <li><a href="#food">Food</a></li>
+          <li><a href="#aboutus">About Us</a></li>
+          <li><a href="#contact">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- NavBar -->
+
+    <!-- Main Content -->
+    <div class="content-wrapper">
+      <div class="section">
+        <div class="blog-item">
+          <div class="blog-image" style="background: url('assets/pic1.png') no-repeat center;background-size: cover;">
+          </div>
+          <div class="blog-summary">
+            <h2>Blog Title</h2>
+            <p>Blog content</p>
+          </div>
+        </div>
+        <div class="blog-item">
+          <div class="blog-image" style="background: url('assets/pic1.png') no-repeat center;background-size: cover;">
+          </div>
+          <div class="blog-summary">
+            <h2>Blog Title</h2>
+            <p>Blog content</p>
+          </div>
+        </div>
+        <div class="blog-item">
+          <div class="blog-image" style="background: url('assets/pic1.png') no-repeat center;background-size: cover;">
+          </div>
+          <div class="blog-summary">
+            <h2>Blog Title</h2>
+            <p>Blog content</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="aside">
+        This is aside
+      </div>
+    </div>
+
+    <!-- Main Content -->
+
+  </div>
+
 </body>
 
 </html>
