home page complete

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Blog</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -19,11 +19,11 @@
     <div class="nav-wrapper">
       <div class="nav-bar">
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#health">Health</a></li>
-          <li><a href="#food">Food</a></li>
-          <li><a href="#aboutus">About Us</a></li>
-          <li><a href="#contact">Contact Us</a></li>
+          <li><a href="/#home">Home</a></li>
+          <li><a href="/#food">Food</a></li>
+          <li><a href="/#lifestyle">Lifestyle</a></li>
+          <li><a href="/#festival">Festival</a></li>
+          <li><a href="/#travle">Travel</a></li>
         </ul>
       </div>
     </div>
@@ -33,37 +33,66 @@
     <div class="content-wrapper">
       <div class="section">
         <div class="blog-item">
-          <div class="blog-image" style="background: url('assets/pic1.png') no-repeat center;background-size: cover;">
+          <div class="blog-image"
+            style="background: url('images/surya-darshan.jpg') no-repeat center;background-size: cover;">
           </div>
           <div class="blog-summary">
-            <h2>Blog Title</h2>
-            <p>Blog content</p>
+            <h2>Newari Gufa: The Sun Marriage</h2>
+            <p>The Newari people are famous for their year-round festivities that take place on various occasions
+              worshipping the
+              numerous deities and depicting historical events. They have beautifully preserved their unique culture and
+              tradition
+              throughout the centuries of the establishment of their community by recreating and repeating these rituals
+              year after
+              year.</p>
           </div>
         </div>
         <div class="blog-item">
-          <div class="blog-image" style="background: url('assets/pic1.png') no-repeat center;background-size: cover;">
+          <div class="blog-image"
+            style="background: url('images/DSCF2329-copress.jpg') no-repeat center;background-size: cover;">
           </div>
           <div class="blog-summary">
-            <h2>Blog Title</h2>
-            <p>Blog content</p>
+            <h2>Reasons to add Pikey Peak Trekking trail to your list</h2>
+            <p>Nepal, the land of Himalayas, has got a lot to offer you from the warm hospitality of people to the
+              charming natural
+              beauty that it holds. </p>
           </div>
         </div>
         <div class="blog-item">
-          <div class="blog-image" style="background: url('assets/pic1.png') no-repeat center;background-size: cover;">
+          <div class="blog-image"
+            style="background: url('images/food-blog-banner.jpg') no-repeat center;background-size: cover;">
           </div>
           <div class="blog-summary">
-            <h2>Blog Title</h2>
-            <p>Blog content</p>
+            <h2>Nepali Dishes You Need to Try at Least Once</h2>
+            <p>In Nepal, a wide range of cuisines are mainly based on ethnicity or based on region. However, every local
+              dish
+              represents ample room for cultural and geographic diversity. There are many dishes and traditional cuisine
+              which someone
+              must try if they are visiting Nepal for the first time.</p>
           </div>
         </div>
       </div>
 
       <div class="aside">
-        This is aside
+        <div class="item">
+          <!-- <div class="blog-summary"> -->
+          <h2>Recent Posts</h2>
+          <ol>
+            <li>Newari Gufa: The Sun Marriage</li>
+            <li>Reasons to add Pikey Peak Trekking trail to your list</li>
+            <li>Nepali Dishes You Need to Try at Least Once</li>
+          </ol>
+          <!-- </div> -->
+        </div>
+
       </div>
     </div>
 
     <!-- Main Content -->
+
+    <footer>
+      <p>Copyright © 2022 Roch Bajracharya</p>
+    </footer>
 
   </div>
 
