--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="nav-wrapper">
       <div class="nav-bar">
         <ul>
-          <li><a href="/#home">Home</a></li>
-          <li><a href="/#food">Food</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="food.html">Food</a></li>
           <li><a href="/#lifestyle">Lifestyle</a></li>
           <li><a href="/#festival">Festival</a></li>
           <li><a href="/#travle">Travel</a></li>
