--- a/food.html
+++ b/food.html
@@ -20,10 +20,10 @@
       <div class="nav-bar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="/#food">Food</a></li>
-          <li><a href="/#lifestyle">Lifestyle</a></li>
-          <li><a href="/#festival">Festival</a></li>
-          <li><a href="/#travle">Travel</a></li>
+          <li><a href="food.html">Food</a></li>
+          <li><a href="lifestyle.html">Lifestyle</a></li>
+          <li><a href="festival.html">Festival</a></li>
+          <li><a href="travel.html">Travel</a></li>
         </ul>
       </div>
     </div>
