--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="food.html">Food</a></li>
-          <li><a href="/#lifestyle">Lifestyle</a></li>
-          <li><a href="/#festival">Festival</a></li>
-          <li><a href="/#travle">Travel</a></li>
+          <li><a href="lifestyle.html">Lifestyle</a></li>
+          <li><a href="festival.html">Festival</a></li>
+          <li><a href="travel.html">Travel</a></li>
         </ul>
       </div>
     </div>
@@ -77,10 +77,11 @@
         <div class="item">
           <!-- <div class="blog-summary"> -->
           <h2>Recent Posts</h2>
-          <ol>
-            <li>Newari Gufa: The Sun Marriage</li>
-            <li>Reasons to add Pikey Peak Trekking trail to your list</li>
-            <li>Nepali Dishes You Need to Try at Least Once</li>
+          <ol class="recent-post">
+            <li><a href="lifestyle.html">Newari Gufa: The Sun Marriage</a></li>
+            <li><a href="travel.html">Reasons to add Pikey Peak Trekking trail to your list</a></li>
+            <li><a href="food.html">Nepali Dishes You Need to Try at Least Once</a></li>
+            <li><a href="festival.html">Mha Puja – A ritual to empower and cleanse one’s soul</a></li>
           </ol>
           <!-- </div> -->
         </div>
