--- a/lifestyle.html
+++ b/lifestyle.html
@@ -35,10 +35,11 @@
         <div class="item">
           <!-- <div class="blog-summary"> -->
           <h2>Recent Posts</h2>
-          <ol>
-            <li>Newari Gufa: The Sun Marriage</li>
-            <li>Reasons to add Pikey Peak Trekking trail to your list</li>
-            <li>Nepali Dishes You Need to Try at Least Once</li>
+          <ol class="recent-post">
+            <li><a href="lifestyle.html">Newari Gufa: The Sun Marriage</a></li>
+            <li><a href="travel.html">Reasons to add Pikey Peak Trekking trail to your list</a></li>
+            <li><a href="food.html">Nepali Dishes You Need to Try at Least Once</a></li>
+            <li><a href="festival.html">Mha Puja – A ritual to empower and cleanse one’s soul</a></li>
           </ol>
           <!-- </div> -->
         </div>
