image rollovers added

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     <div class="content-wrapper">
       <div class="section">
         <div class="blog-item">
-          <div class="blog-image"
-            style="background: url('images/surya-darshan.jpg') no-repeat center;background-size: cover;">
+          <div class="blog-image gufa">
           </div>
           <div class="blog-summary">
             <h2>Newari Gufa: The Sun Marriage</h2>
@@ -48,8 +47,7 @@
           </div>
         </div>
         <div class="blog-item">
-          <div class="blog-image"
-            style="background: url('images/DSCF2329-copress.jpg') no-repeat center;background-size: cover;">
+          <div class="blog-image travel">
           </div>
           <div class="blog-summary">
             <h2>Reasons to add Pikey Peak Trekking trail to your list</h2>
@@ -59,8 +57,7 @@
           </div>
         </div>
         <div class="blog-item">
-          <div class="blog-image"
-            style="background: url('images/food-blog-banner.jpg') no-repeat center;background-size: cover;">
+          <div class="blog-image food">
           </div>
           <div class="blog-summary">
             <h2>Nepali Dishes You Need to Try at Least Once</h2>
