--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="blog-item">
           <div class="blog-image gufa">
           </div>
-          <div class="blog-summary">
+          <a class="blog-summary" href="lifestyle.html">
             <h2>Newari Gufa: The Sun Marriage</h2>
             <p>The Newari people are famous for their year-round festivities that take place on various occasions
               worshipping the
@@ -44,29 +44,29 @@
               throughout the centuries of the establishment of their community by recreating and repeating these rituals
               year after
               year.</p>
-          </div>
+          </a>
         </div>
         <div class="blog-item">
           <div class="blog-image travel">
           </div>
-          <div class="blog-summary">
+          <a class="blog-summary" href="travel.html">
             <h2>Reasons to add Pikey Peak Trekking trail to your list</h2>
             <p>Nepal, the land of Himalayas, has got a lot to offer you from the warm hospitality of people to the
               charming natural
               beauty that it holds. </p>
-          </div>
+          </a>
         </div>
         <div class="blog-item">
           <div class="blog-image food">
           </div>
-          <div class="blog-summary">
+          <a href="food.html" class="blog-summary">
             <h2>Nepali Dishes You Need to Try at Least Once</h2>
             <p>In Nepal, a wide range of cuisines are mainly based on ethnicity or based on region. However, every local
               dish
               represents ample room for cultural and geographic diversity. There are many dishes and traditional cuisine
               which someone
               must try if they are visiting Nepal for the first time.</p>
-          </div>
+          </a>
         </div>
       </div>
 
