--- a/lifestyle.html
+++ b/lifestyle.html
@@ -48,7 +48,7 @@
 
       <div class="section">
         <div class="blog-content">
-          <h1>NNewari Gufa: The Sun Marriage</h1>
+          <h1>Newari Gufa: The Sun Marriage</h1>
           <img src="../images/surya-darshan.jpg" style="width: 100%;" />
           <div class="content">
             <p>
