home page mobile responsive

--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Blog</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="icofont/icofont.min.css">
 </head>
 
 <body>
   <div class="main-wrapper">
     <!-- Heading -->
-    <h1>My Blogs</h1>
+    <div class="header">
+      <h1>My Blogs</h1>
+      <a><i class="icofont-navigation-menu"></i></a>
+    </div>
     <!-- Heading -->
 
     <!-- NavBar -->
