js in other pages

--- a/lifestyle.html
+++ b/lifestyle.html
@@ -175,6 +175,16 @@
     </footer>
 
   </div>
+  <script>
+    function toggleNav() {
+      var x = document.getElementById("topNav");
+      if (x.className === "nav-wrapper") {
+        x.className += " responsive";
+      } else {
+        x.className = "nav-wrapper";
+      }
+    }
+  </script>
 
 </body>
 
