--- a/festival.html
+++ b/festival.html
@@ -135,6 +135,17 @@
 
   </div>
 
+  <script>
+    function toggleNav() {
+      var x = document.getElementById("topNav");
+      if (x.className === "nav-wrapper") {
+        x.className += " responsive";
+      } else {
+        x.className = "nav-wrapper";
+      }
+    }
+  </script>
+
 </body>
 
 </html>
